--- a/KalliopeSync.Logging/app.config
+++ b/KalliopeSync.Logging/app.config
@@ -3,13 +3,10 @@
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
-    <appSettings>
-        <add key="StorageConnectionString" value="" />
-    </appSettings>
-<log4net>
+  <log4net>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
       <threshold value="All" />
-      <file value="Logs" />
+      <file value="C:\LogFile" />
       <appendToFile value="true" />
       <rollingStyle value="Date" />
       <datePattern value="'.'yyyyMMdd'.log.txt'" />
@@ -22,4 +19,5 @@
       <level value="ALL" />
       <appender-ref ref="RollingLogFileAppender" />
     </root>
-  </log4net></configuration>
+  </log4net>
+</configuration>
