--- a/KalliopeSync.Core.Full/KalliopeSync.Core.Full.csproj
+++ b/KalliopeSync.Core.Full/KalliopeSync.Core.Full.csproj
@@ -60,7 +60,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Downloader.cs" />
     <Compile Include="Uploader.cs" />
-    <Compile Include="Differentiator.cs" />
+    <Compile Include="Indexer.cs" />
+    <Compile Include="VirtualFileSystem.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
