--- a/KalliopeSync.Tests/KalliopeSync.Tests.csproj
+++ b/KalliopeSync.Tests/KalliopeSync.Tests.csproj
@@ -40,4 +40,10 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KalliopeSync.Core.Full\KalliopeSync.Core.Full.csproj">
+      <Project>{A4E2F1E7-C583-43E7-AAB6-C733E6F8B3CB}</Project>
+      <Name>KalliopeSync.Core.Full</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
