Fixed Path HtmlEncode bug. Won't repeat upload single quoted files.

--- a/KalliopeSync.Tests/KalliopeSync.Tests.csproj
+++ b/KalliopeSync.Tests/KalliopeSync.Tests.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="Core\TestIndexer.cs" />
     <Compile Include="Db\TestDbProvider.cs" />
+    <Compile Include="Db\TestSyncItemService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
