--- a/KalliopeSync.Core.Full/KalliopeSync.Core.Full.csproj
+++ b/KalliopeSync.Core.Full/KalliopeSync.Core.Full.csproj
@@ -54,22 +54,17 @@
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Package>monodevelop</Package>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Downloader.cs" />
-    <Compile Include="Uploader.cs" />
-    <Compile Include="Indexer.cs" />
-    <Compile Include="VirtualFileSystem.cs" />
     <Compile Include="StringExtensions.cs" />
-
     <Compile Include="Services\Downloader.cs" />
     <Compile Include="Services\Indexer.cs" />
     <Compile Include="Services\Uploader.cs" />
     <Compile Include="Services\VirtualFileSystem.cs" />
     <Compile Include="Models\SyncItem.cs" />
-
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
