--- a/KalliopeSync.Core.Full/KalliopeSync.Core.Full.csproj
+++ b/KalliopeSync.Core.Full/KalliopeSync.Core.Full.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Services\Uploader.cs" />
     <Compile Include="Services\VirtualFileSystem.cs" />
     <Compile Include="Models\SyncItem.cs" />
+    <Compile Include="Models\SyncStatus.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
