--- a/KalliopeSync.Gtk/KalliopeSync.View.csproj
+++ b/KalliopeSync.Gtk/KalliopeSync.View.csproj
@@ -86,12 +86,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="gtk-gui\generated.cs" />
-    <Compile Include="MainWindow.cs" />
-    <Compile Include="gtk-gui\MainWindow.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\SyncItem.cs" />
     <Compile Include="Extensions\TreeViewExtensions.cs" />
+    <Compile Include="Views\MainWindow.cs" />
+    <Compile Include="Views\ConnectionDialog.cs" />
+    <Compile Include="gtk-gui\KalliopeSync.View.ConnectionDialog.cs" />
+    <Compile Include="gtk-gui\KalliopeSync.View.MainWindow.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -107,6 +109,7 @@
   <ItemGroup>
     <Folder Include="ViewModel\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Views\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
