--- a/KalliopeSync.Gtk/KalliopeSync.View.csproj
+++ b/KalliopeSync.Gtk/KalliopeSync.View.csproj
@@ -90,10 +90,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\SyncItem.cs" />
     <Compile Include="Extensions\TreeViewExtensions.cs" />
-    <Compile Include="Views\MainWindow.cs" />
     <Compile Include="Views\ConnectionDialog.cs" />
     <Compile Include="gtk-gui\KalliopeSync.View.ConnectionDialog.cs" />
-    <Compile Include="gtk-gui\KalliopeSync.View.MainWindow.cs" />
+    <Compile Include="Views\MainView.cs" />
+    <Compile Include="gtk-gui\KalliopeSync.View.MainView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
