Updating Core with fixes to avoid overwrites when sycncing. Partially fixes URL encoding. Improves on comparison while downloading. Updates all Nuget packages

--- a/KalliopeSync.Tests/KalliopeSync.Tests.csproj
+++ b/KalliopeSync.Tests/KalliopeSync.Tests.csproj
@@ -29,14 +29,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Mono.Data.Sqlite" />
+    <Reference Include="System.Data" />
     <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\TestIndexer.cs" />
     <Compile Include="Db\TestDbProvider.cs" />
-    <Compile Include="Db\TestSyncItemService.cs" />
+    <Compile Include="Db\TestSyncItemServices.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -54,10 +56,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
     <Folder Include="Core\" />
     <Folder Include="Db\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
